# taskipy

./: .all-contributorsrc  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  task  task.bat
.github/: requirements-py36-ci.txt  setup-py36-ci.py
.github/workflows/: ci.yml  release.yml  tmp_windows_job.yml  windows.yml  windows_sanity.yml
.hooks/: make_release_commit.py
docs/: ADVANCED_FEATURES.md
hooks/: tag_release.py
taskipy/: __init__.py  cli.py  command.py  decorators.py  exceptions.py  io.py  list.py  plugin.py  pyproject.py  run.py  runner.py  task.py  task_runner.py
tests/: test_decorators.py  test_taskipy.py  test_tomli_install.py  test_windows.py  test_windows_sanity.py
tests/fixtures/project_with_cwd_under_settings/: pyproject.toml
tests/fixtures/project_with_cwd_under_settings/child_with_pyproject/: pyproject.toml
tests/fixtures/project_with_cwd_under_specific_task/: pyproject.toml
tests/fixtures/project_with_cwd_under_specific_task_and_settings/: pyproject.toml
tests/fixtures/project_with_malformed_pyproject/: pyproject.toml
tests/fixtures/project_with_pre_post_task_hooks/: pyproject.toml
tests/fixtures/project_with_pyproject_and_tasks/: pyproject.toml
tests/fixtures/project_with_pyproject_without_tasks_section/: pyproject.toml
tests/fixtures/project_with_task_that_checks_args_passed_with_spaces/: identify.py  pyproject.toml
tests/fixtures/project_with_tasks_from_child/: pyproject.toml
tests/fixtures/project_with_tasks_from_child/child_with_pyproject/: pyproject.toml
tests/fixtures/project_with_tasks_suggestion/: pyproject.toml
tests/fixtures/project_with_tasks_that_accept_arguments/: count.sh  pyproject.toml
tests/fixtures/project_with_tasks_that_handle_interrupts/: loop_with_sigint_handler.py  loop_without_sigint_handler.py  pyproject.toml
tests/fixtures/project_with_tasks_that_handle_sigterm/: loop_with_sigterm_handler.py  pyproject.toml
tests/fixtures/project_with_tasks_to_list/: pyproject.toml
tests/fixtures/project_with_windows_task/: pyproject.toml
tests/utils/: fixture.py  project.py
